<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="mainViewModel"
            type="com.example.gsdemo.viewmodel.MainViewModel" />

        <variable
            name="apoDetail"
            type="com.example.gsdemo.model.APODDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_500"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tvTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:src="@drawable/filter_white" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/arial_mt"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="@{mainViewModel.apoDetailObs!=null?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/cvImage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cvImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:visibility="@{mainViewModel.apoDetailObs!=null?View.VISIBLE:View.GONE}"
            app:cardElevation="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                app:imageUrl="@{mainViewModel.apoDetailObs.url}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/shadow"
                android:gravity="bottom"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:gravity="bottom"
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:paddingRight="3dp"
                    android:text="@{mainViewModel.apoDetailObs.title}"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="@string/app_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:gravity="top"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="3dp"
                    android:text="@{mainViewModel.apoDetailObs.date}"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:text="@string/app_name" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/arial_mt"
            android:text="@string/list_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="@{mainViewModel.isRangeListAvailable ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvImage" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adapter="@{mainViewModel.getAPODListAdapter()}"
            android:orientation="horizontal"
            android:visibility="@{mainViewModel.isRangeListAvailable ? View.VISIBLE : View.GONE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tvListTitle" />

        <FrameLayout
            android:id="@+id/flMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/transparent_black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/toolbar">

            <LinearLayout
                android:id="@+id/llFilterMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:background="@color/white"
                android:elevation="20dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"
                android:paddingRight="10dp"
                android:paddingBottom="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilStartDate"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/start_date"
                        app:boxBackgroundColor="@color/white"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etStartDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:drawableLeft="@drawable/date"
                            android:drawablePadding="5dp"
                            android:editable="false"
                            android:focusable="false"
                            android:fontFamily="@font/arial_mt"
                            android:onClick="@{(v)->mainViewModel.openDatePicker(v)}"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEndDate"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:hint="@string/end_date"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxStrokeColor="@color/purple_500"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEndDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:drawableLeft="@drawable/date"
                            android:drawablePadding="5dp"
                            android:editable="false"
                            android:focusable="false"
                            android:fontFamily="@font/arial_mt"
                            android:onClick="@{(v)->mainViewModel.openDatePicker(v)}"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp">

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/pbCircular"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        android:elevation="10dp"
                        android:indeterminate="true"
                        android:visibility="@{mainViewModel.isProgressDialogVisibile? View.VISIBLE : View.GONE}"
                        app:indicatorColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnApply"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:alpha="@{(mainViewModel.startDateObs!=null &amp;&amp; mainViewModel.endDateObs!=null) ?1f:0.3f}"
                        android:background="@color/purple_500"
                        android:enabled="@{mainViewModel.startDateObs!=null &amp;&amp; mainViewModel.endDateObs!=null }"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:onClick="@{(v)->mainViewModel.callAPODListAPI(v)}"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/apply"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />
                </RelativeLayout>

            </LinearLayout>
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>